added debug map update

--- a/BlokeeAutomation/blokus.html
+++ b/BlokeeAutomation/blokus.html
@@ -40,6 +40,18 @@ function updateMap() {
 		case 3:
 			color = 'red'
 			break;
+		case 4:
+			color = 'cyan'
+			break;
+		case 5:
+			color = 'DarkOliveGreen'
+			break;
+		case 6:
+			color = 'gold'
+			break;
+		case 7:
+			color = 'HotPink'
+			break;
 		default:
 			break;
 		}
